--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-  <title>template</title>
+  <title>project-path</title>
 </head>
 <body>
-<div id="app"></div>
+<div id="app-box"></div>
+<!-- built files will be auto injected -->
 </body>
 </html>
