--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html data-dpr="2" style="font-size: 75px; width: 100%; height: 100%;">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-  <title>project-path</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <title>宜居云-商用电磁炉</title>
 </head>
 <body>
 <div id="app-box"></div>
